# quadrax

./: Cargo.toml  README.md
examples/: basic_window.rs  gpu_vs_cpu_add.rs  graphics.rs
shaders/: screen.frag
src/: lib.rs  main.rs
src/backend/: buffer.rs  mod.rs
src/backend/buffer/: coherent.rs  constant.rs  mod.rs  staged.rs  variable.rs
src/backend/gpu_graph/: mod.rs
src/compute/: mod.rs
src/compute/mathematics/: mod.rs
src/cpu/: mod.rs
src/cpu/calculation/: mod.rs
src/cpu/calculation/maths/: matrix.rs
src/cpu/maths/: matrix.rs  vector.rs
src/cpu/simulation/: mod.rs
src/cpu/simulation/tecs/: mod.rs
src/cpu/storage/: mod.rs
src/gpu/: backend.rs  buffer.rs  mod.rs  texture.rs
src/gpu/backend/: mod.rs
src/gpu/device/: mod.rs
src/gpu/memory/: buffer.rs  image.rs  mod.rs
src/gpu/memory/buffer/: mod.rs
src/gpu/memory/image/: mod.rs
src/gpu/task/: compute.rs  manager.rs  mod.rs
src/gpu/task/gfx/: immediate.rs  mod.rs  raytracer.rs
src/gpu/task/graphics/: mod.rs  rasteriser.rs
src/gpu/window/: mod.rs
src/graphics/: mod.rs
src/graphics/shaders/: mod.rs
src/mathematics/: mod.rs  vector.rs
src/mathematics/shaders/: mod.rs  vector_add.glsl  vector_ops.comp
tests/: buffer.rs  compute.rs  matrix.rs  storage.rs  texture.rs  vector.rs
tests/shaders/: compute.wgsl
