[package]
name = "quadrax"
version = "0.0.2"
edition = "2024"
description = "Weird graphics library."
license-file = "./LICENSE"

[profile.dev]
opt-level = 1 

[dependencies]
bytemuck = { version = "1.25.0", features = ["derive"] }
futures = "0.3.32"
mlua = { version = "0.11.6", default-features=false, features = ["luau-jit", "vendored"] }
num-traits = "0.2.19"
petgraph = { version = "0.8.3", default-features = false }
pollster = { version = "0.4.0", features = ["macro"] }
wgpu = "28.0.0"

[dev-dependencies]
image = { version = "0.25.9", default-features = true }
